--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ color:#fdf7a8;
 			
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
-              <td id="content_ml_rptCommands_tdChain_0" style="max-width:35%"><a id="content_ml_rptCommands_lnkName_0" class="bodyMoves">Seichuu Nidan Tsuki</a></td>
+              <td id="content_ml_rptCommands_tdChain_0" style="max-width:35%"><a id="content_ml_rptCommands_lnkName_0" class="bodyMoves"><font color="#d00">Seichuu Nidan Tsuki</font></a></td>
 
               <td style="max-width:45%" class="bodyData"><img src="moves/right.png"><b> + </b><img src="moves/hpunch.png"></td>
        
