--- a/download.html
+++ b/download.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><title>
-	Street Fighter 2 Mix
+	Street Fighter Zero 3 Mix
 </title>
     
 <script data-ad-client="ca-pub-2757221767764846" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>    
