--- a/download.html
+++ b/download.html
@@ -3,8 +3,6 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"><title>
 	Street Fighter Zero 3 Mix
 </title>
-    
-<script data-ad-client="ca-pub-2757221767764846" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>    
 
 <style type="text/css">
 div.cp 
@@ -17,18 +15,17 @@ div.cp
 
 </head>
 <body id="bdyPage" class="fab bodyDetail" style="background:linear-gradient(#111111,#000000);background-color:#000000;background-repeat:no-repeat;">
-    <a name="pageTop"></a>
-    
+    <a name="pageTop"></a>    
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134118723-2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6KK1LJMX24"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-134118723-2');
+  gtag('config', 'G-6KK1LJMX24');
 </script>
 
 
