--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ color:#fdf7a8;
               <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Change Order (1-2)</a></td>
 
-              <td style="max-width:45%" class="bodyData">Hold <img src="moves/start.png">, before the fight begins <font><font></td>
+              <td style="max-width:45%" class="bodyData">Hold <img src="moves/start.png">, before the Stage is loaded <font><font></td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>	
@@ -619,7 +619,7 @@ color:#fdf7a8;
               <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Change Order (1-3)</a></td>
 
-              <td style="max-width:45%" class="bodyData">Hold <img src="moves/up.png"> + <img src="moves/start.png">, before the fight begins <font><font></td>
+              <td style="max-width:45%" class="bodyData">Hold <img src="moves/up.png"> + <img src="moves/start.png">, before the Stage is loaded <font><font></td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>	
