--- a/index.html
+++ b/index.html
@@ -655,7 +655,16 @@ color:#fdf7a8;
             <tr><td></td><td colspan="2"></td></tr>	
 			
 			
-			<tr><td colspan="10" class="bodyTab">In the Fight: </td></tr>           
+			<tr><td colspan="10" class="bodyTab">In the Fight: </td></tr>   
+
+			<tr style="vertical-align: top">
+              <td style="max-width:15%"></td>
+              <td style="max-width:35%"><a class="bodyMoves">No Air Guard</a></td>
+
+              <td style="max-width:45%" class="bodyData">Only <font color="#0f0">Just Defence</font> can be done on air </td>
+       
+            </tr>
+            <tr><td></td><td colspan="2"></td></tr>	
 			
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
