--- a/index.html
+++ b/index.html
@@ -2545,6 +2545,16 @@ color:#fdf7a8;
 			
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
+              <td style="max-width:35%"><a class="bodyMoves">Sailor Punch</a></td>
+
+              <td style="max-width:45%" class="bodyData"><img src="moves/left.png"> + <img src="moves/hpunch.png"></td>
+       
+            </tr>
+            <tr><td></td><td colspan="2"></td></tr>
+			
+			
+			<tr style="vertical-align: top">
+              <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Flower Kick</a></td>
 
               <td style="max-width:45%" class="bodyData"><img src="moves/right.png"> + <img src="moves/mkick.png"></td>
