--- a/index.html
+++ b/index.html
@@ -583,9 +583,18 @@ color:#fdf7a8;
 			
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
-              <td style="max-width:35%"><a class="bodyMoves">Color Select</a></td>
+              <td style="max-width:35%"><a class="bodyMoves">Default Color</a></td>
 
-              <td style="max-width:45%" class="bodyData">Hold <img src="moves/start.png"> and move to change char color <font><font></td>
+              <td style="max-width:45%" class="bodyData">If it is in the default color each button selects a different color <font><font></td>
+       
+            </tr>
+            <tr><td></td><td colspan="2"></td></tr>
+			
+			<tr style="vertical-align: top">
+              <td style="max-width:15%"></td>
+              <td style="max-width:35%"><a class="bodyMoves">Color Preview</a></td>
+
+              <td style="max-width:45%" class="bodyData">Hold <img src="moves/start.png"> and move cursor to change char color <font><font></td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
