--- a/index.html
+++ b/index.html
@@ -665,6 +665,15 @@ color:#fdf7a8;
 			
 			
 			<tr><td colspan="10" class="bodyTab">In the Fight: </td></tr>   
+			
+			<tr style="vertical-align: top">
+              <td style="max-width:15%"></td>
+              <td style="max-width:35%"><a class="bodyMoves">Taunt</a></td>
+
+              <td style="max-width:45%" class="bodyData">Randomly reduces a little of the opponent's GuardBar <font color="#d00">(except Dan)</font> </td>
+       
+            </tr>
+            <tr><td></td><td colspan="2"></td></tr>	
 
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
