--- a/index.html
+++ b/index.html
@@ -668,9 +668,9 @@ color:#fdf7a8;
 			
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
-              <td style="max-width:35%"><a class="bodyMoves">Taunt</a></td>
+              <td style="max-width:35%"><a class="bodyMoves">Provocation</a></td>
 
-              <td style="max-width:45%" class="bodyData">Randomly reduces a little of the opponent's GuardBar <font color="#d00">(except Dan)</font> </td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/start.png"> Randomly reduces a little of the opponent's GuardBar <font color="#d00">(except Dan)</font> </td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>	
