--- a/index.html
+++ b/index.html
@@ -1707,7 +1707,7 @@ color:#fdf7a8;
 			
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
-              <td style="max-width:35%"><a class="bodyMoves">Shoryuken</a></td>
+              <td style="max-width:35%"><a class="bodyMoves"><font color="#d00">Fire Shoryuken</font></a></td>
 
               <td style="max-width:45%" class="bodyData"><img src="moves/rory.png"> + <img src="moves/punch.png"></td>
       
