--- a/index.html
+++ b/index.html
@@ -5554,21 +5554,12 @@ color:#fdf7a8;
 			
 			<tr><td colspan="10" class="bodyTab">Super Moves: </td></tr>		
 			
-			<tr style="vertical-align: top">
-              <td style="max-width:15%"></td>
-              <td style="max-width:35%"><a class="bodyMoves">Oni Musou</a></td>
-
-              <td style="max-width:45%" class="bodyData"><img src="moves/holdleft.png"> <img src="moves/rightleft.png"> <img src="moves/right.png"> + <img src="moves/punch.png"></td>
-       
-            </tr>
-            <tr><td></td><td colspan="2"></td></tr>
 			
-
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Crazy Buffalo</a></td>
 
-              <td style="max-width:45%" class="bodyData"><img src="moves/holdleft.png"> <img src="moves/rightleft.png"> <img src="moves/right.png"> + <img src="moves/punch.png"></td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/holdleft.png"> <img src="moves/rightleft.png"> <img src="moves/right.png"> + <img src="moves/punch.png"> (hold <img src="moves/kick.png"> for Dash Uppers)</td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
