--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@ td.header2 {
 
             <table style="border-collapse:collapse;"><tbody><tr><td><img id="masterHeader_rptHeader_imgHead" height="70" src="icon.png"></td>
      
-            <td id="masterHeader_rptHeader_tdMid_1" class="header2"><a id="masterHeader_rptHeader_Hyperlink1_1" class="header" href="index.html">Characters</a></td>		             
+            <td id="link_1" class="header2"><a class="header" href="index.html">Characters</a></td>		             
+            <td id="link_3" class="header2"><a class="header" href="arts.html">Arts</a></td>		             
           
 		
-			<td style="padding:0px"><img id="masterHeader_rptHeader_imgFoot" src="bison.gif" height="80" ></td>
+			<td style="padding:0px"><img src="bison.gif" height="80" ></td>
 			
 			</tr></tbody></table>
 			
