--- a/arts.html
+++ b/arts.html
@@ -510,11 +510,13 @@ color:#fdf7a8;
 .tg .tg-0lax{text-align:left;vertical-align:top}
 </style>
 	
-	<img src="arts/wall3.png" width="90%"> <br><br>
-	<img src="arts/4.png" width="90%"> <br><br>
-	<img src="arts/2.png" width="90%"> <br><br>
-	<img src="arts/1.png" width="90%"> <br><br>
-	<img src="arts/marq.png" width="90%"> <br><br>
+	<img src="arts/wall3.png" width="100%"> <br><br>
+	<img src="arts/4.png" width="100%"> <br><br>
+	<img src="arts/2.png" width="100%"> <br><br>
+	<img src="arts/3on3.png" width="100%"> <br><br>
+	<img src="arts/popstersaku.png" width="100%"> <br><br>
+	<img src="arts/1.png" width="100%"> <br><br>
+	<img src="arts/marq.png" width="100%"> <br><br>
 	
 
   
