--- a/download.html
+++ b/download.html
@@ -18,7 +18,7 @@ div.cp
     
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https Moves: //www.googletagmanager.com/gtag/js?id=G-6KK1LJMX24"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6KK1LJMX24"></script>
 <script>  
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
