--- a/arts.html
+++ b/arts.html
@@ -515,6 +515,8 @@ color:#fdf7a8;
 	<img src="arts/2.png" width="100%"> <br><br>
 	<img src="arts/3on3.png" width="100%"> <br><br>
 	<img src="arts/popstersaku.png" width="100%"> <br><br>
+	<img src="arts/sakura.png" width="100%"> <br><br>
+	<img src="arts/chunli.png" width="100%"> <br><br>
 	<img src="arts/1.png" width="100%"> <br><br>
 	<img src="arts/marq.png" width="100%"> <br><br>
 	
