--- a/arts.html
+++ b/arts.html
@@ -510,15 +510,17 @@ color:#fdf7a8;
 .tg .tg-0lax{text-align:left;vertical-align:top}
 </style>
 	
-	<img src="arts/wall3.png" width="100%"> <br><br>
-	<img src="arts/4.png" width="100%"> <br><br>
-	<img src="arts/2.png" width="100%"> <br><br>
-	<img src="arts/3on3.png" width="100%"> <br><br>
-	<img src="arts/popstersaku.png" width="100%"> <br><br>
-	<img src="arts/sakura.png" width="100%"> <br><br>
-	<img src="arts/chunli.png" width="100%"> <br><br>
-	<img src="arts/1.png" width="100%"> <br><br>
-	<img src="arts/marq.png" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=12f9YOnVZ9qO3ZAXc0X8gi_mIynzIfJo5" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=1yGqHszQGPSYmkAdeNPfVXMEVz6qa4e7v" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=1gr_wJOq0-R2seKUW8ozmJWToRoSOHR8r" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=159dHcnCj8ldDWgAcbHtyZJkb0rRTSoXO" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=1zbaRcqSEgaGXvrvIJnMoMJJKYxTbPaAD" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=15jDfNwsFompd9ihRaThYfBeI1TCt8vyu" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=1mELGV6cR09Lo-4bpK6XThkB8qyClNmyy" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=1SIBn-iugKHGg6Aip_Rxtqios5WQ3KEVp" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=1BQDGlL_ZAf2jtmVT8vkjL0NdbzkXHlzX" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=1qkq6-aASyTDgSXKtMxBCL1_h9XKpmm7Q" width="100%"> <br><br>
+	<img src="https://drive.google.com/uc?export=download&id=18VAui9ivkOrYFVHWpkPwzw5zwWkcSd_a" width="100%"> <br><br>
 	
 
   
