--- a/index.html
+++ b/index.html
@@ -6204,7 +6204,7 @@ color:#fdf7a8;
               <td style="max-width:35%"><a class="bodyMoves" href="index.html#Bison+"> <img src="char/m-bison2.png" height="64" width="64" title="Bison+"></a>
 			  <font color="#F00">ATK↑</font>, <font color="#FF0">SPD↑</font>, <font color="#0DD">DEF↓</font>, <font color="#0F0">Max GuardBar-1</font> </td>
 
-              <td style="max-width:45%" class="bodyData"><img src="moves/max.png"> <img src="moves/qcf.png"> <img src="moves/qcf.png"> + <img src="moves/start.png"> <font color="#FF0"> (Guard -2 and Upgrade Bison)</font></td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/max.png"> <img src="moves/qcf.png"> <img src="moves/qcf.png"> + <img src="moves/start.png"> <font color="#FF0"> (Guard -2)</font></td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
@@ -6428,7 +6428,7 @@ color:#fdf7a8;
               <td style="max-width:35%"><a class="bodyMoves" href="index.html#Bison"> <img src="char/m-bison.png" height="64" width="64" title="Bison"></a>
 			  <font color="#0F0">Power Lv</font><font color="#FF0">+1</font> </td>
 
-              <td style="max-width:45%" class="bodyData"><img src="moves/qcf.png"> <img src="moves/qcf.png"> + <img src="moves/start.png"> <font color="#FF0"> (Downgrade Bison)</font></td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/qcf.png"> <img src="moves/qcf.png"> + <img src="moves/start.png"></td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
