--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ color:#fdf7a8;
 
 </style>
 
-<font color="#0F0"> Ver(0.06j) <font>
+<font color="#0F0"> Ver(0.06k) <font>
 
 <tr><br></tr>	
 <span id="content_mlSub_lblSubmit" class="bodyHeading"></span>
