--- a/arts.html
+++ b/arts.html
@@ -511,18 +511,22 @@ color:#fdf7a8;
 </style>
 	
 	
-	<td class="bodyData"> 
+	<td class="bodyData"> 	
+	<a href="arts/02.html"> <img src="arts/poster3.jpg"></a>
+	<a href="arts/10.html"> <img src="arts/poster4.jpg"></a>
 	<a href="arts/01.html"> <img src="arts/wall3.jpg"></a>
-	<a href="arts/02.html"> <img src="arts/4.jpg"></a>
 	<a href="arts/03.html"> <img src="arts/2.jpg"></a>
 	<a href="arts/04.html"> <img src="arts/3on3.jpg"></a>
 	<a href="arts/05.html"> <img src="arts/popstersaku.jpg"></a>
 	<a href="arts/06.html"> <img src="arts/sakura.jpg"></a>
 	<a href="arts/07.html"> <img src="arts/charlie.jpg"></a>
 	<a href="arts/08.html"> <img src="arts/mika.jpg"></a>
-	<a href="arts/09.html"> <img src="arts/chunli.jpg"></a>
-	<a href="arts/10.html"> <img src="arts/1.jpg"></a>
-	<a href="arts/10.html"> <img src="arts/marq.jpg"></a>		
+	<a href="arts/09.html"> <img src="arts/chunli.jpg"></a>	
+	<a href="arts/11.html"> <img src="arts/birdie.jpg"></a>
+	<a href="arts/12.html"> <img src="arts/dan.jpg"></a>
+	<a href="arts/13.html"> <img src="arts/capa1.png"></a>
+	<a href="arts/14.html"> <img src="arts/capa2.png"></a>
+	<a href="arts/99.html"> <img src="arts/marq.jpg"></a>		
 	</td>	
 	
 	
