--- a/download.html
+++ b/download.html
@@ -61,9 +61,9 @@ td.header2 {
 
             <table style="border-collapse:collapse;"><tbody><tr><td><img id="masterHeader_rptHeader_imgHead" height="70" src="icon.png"></td>
      
-            <td id="link_1" class="header2"><a class="header" href="index.html">Characters</a></td>		             
+            <td id="link_1" class="header"><a class="header" href="index.html">Characters</a></td>		             
             <td id="link_2" class="header2"><a class="header" href="download.html">Download</a></td>	             
-            <td id="link_3" class="header2"><a class="header" href="arts.html">Arts</a></td>	             
+            <td id="link_3" class="header"><a class="header" href="arts.html">Arts</a></td>	             
             
 		
 			<td style="padding:0px"><img src="chunli.gif" height="80" ></td>
@@ -522,7 +522,7 @@ color:#fdf7a8;
 		
 		
 		<td class="bodyData">
-		<a target="_blank" href="downloads/sfa3.zip"> <img src="download.png" height="144" width="144" title="system" align="top"></a> 
+		<a target="_blank" href="download/sfa3.zip"> <img src="download.png" height="144" width="144" title="system" align="top"></a> 
 	    &nbsp;&nbsp;&nbsp;</a> 
 	
     	<br><font color="#0e0">Version 0.07</font> </a><br>
@@ -547,9 +547,10 @@ color:#fdf7a8;
 			
 			
 			<tr><td colspan="10" class="bodyTab">Download: <font color="#cb0"><a target="_blank" href="https://www.fightcade.com/">https://www.fightcade.com</a> </td></tr>
-			<tr><td colspan="10" class="bodyTab">Put <font color="#0f0">sfa3.zip</font> in the folder <font color="#ff0">"FightCade/emulator/fbneo/ROMs" and ignore CRC errors</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">Put <font color="#0f0">sfa3.zip</font> in the folder <font color="#ff0">"FightCade/emulator/fbneo/ROMs"</font> ignore CRC errors,</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">enter in SFA3 (980904 Euro) rom and click in Test Game</td></tr>	
 			<tr><td colspan="10" class="bodyTab">To play online you need both players to have the same rom, ignore the errors,</td></tr>
-			<tr><td colspan="10" class="bodyTab">and reset with F3 when starting and the error appears when loading savestate</td></tr>
+			<tr><td colspan="10" class="bodyTab">and reset with F3 (player 1) when starting and the error appears when loading savestate</td></tr>
 			<tr><td colspan="10" class="bodyTab"><img src="download/error.png"></td></tr>
 			<tr><td><br></td></tr>
 			
