--- a/arts.html
+++ b/arts.html
@@ -61,8 +61,9 @@ td.header2 {
 
             <table style="border-collapse:collapse;"><tbody><tr><td><img id="masterHeader_rptHeader_imgHead" height="70" src="icon.png"></td>
      
-            <td id="link_1" class="header2"><a class="header" href="index.html">Characters</a></td>		             
-            <td id="link_3" class="header2"><a class="header" href="arts.html">Arts</a></td>	             
+            <td id="link_1" class="header"><a class="header" href="index.html">Characters</a></td>		             
+            <td id="link_2" class="header"><a class="header" href="download.html">Download</a></td>
+			<td id="link_3" class="header2"><a class="header" href="arts.html">Arts</a></td>	             
             
 		
 			<td style="padding:0px"><img src="blanka.gif" height="80" ></td>
@@ -526,6 +527,7 @@ color:#fdf7a8;
 	<a href="arts/12.html"> <img src="arts/dan.jpg"></a>
 	<a href="arts/13.html"> <img src="arts/capa1.png"></a>
 	<a href="arts/14.html"> <img src="arts/capa2.png"></a>
+	<a href="arts/15.html"> <img src="arts/capa3.png"></a>
 	<a href="arts/99.html"> <img src="arts/marq.jpg"></a>		
 	</td>	
 	
