--- a/download.html
+++ b/download.html
@@ -522,7 +522,7 @@ color:#fdf7a8;
 		
 		
 		<td class="bodyData">
-		<a target="_blank" href="download/sfa3.zip"> <img src="download.png" height="144" width="144" title="system" align="top"></a> 
+		<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="144" width="144" title="system" align="top"></a> 
 	    &nbsp;&nbsp;&nbsp;</a> 
 	
     	<br><font color="#0e0">Version 0.07</font> </a><br>
@@ -547,8 +547,8 @@ color:#fdf7a8;
 			
 			
 			<tr><td colspan="10" class="bodyTab">Download: <font color="#cb0"><a target="_blank" href="https://www.fightcade.com/">https://www.fightcade.com</a> </td></tr>
-			<tr><td colspan="10" class="bodyTab">Put <font color="#0f0">sfa3.zip</font> in the folder <font color="#ff0">"FightCade/emulator/fbneo/ROMs"</font> ignore CRC errors,</font></td></tr>
-			<tr><td colspan="10" class="bodyTab">enter in SFA3 (980904 Euro) rom and click in Test Game</td></tr>	
+			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfz3mix.zip</font> to <font color="#0f0">sfa3.zip</font> and put in the folder <font color="#ff0">"FightCade/emulator/fbneo/ROMs"</font> </td></tr>
+			<tr><td colspan="10" class="bodyTab">ignore CRC errors, enter in SFA3 (980904 Euro) rom and click in Test Game</td></tr>	
 			<tr><td colspan="10" class="bodyTab">To play online you need both players to have the same rom, ignore the errors,</td></tr>
 			<tr><td colspan="10" class="bodyTab">and reset with F3 (player 1) when starting and the error appears when loading savestate</td></tr>
 			<tr><td colspan="10" class="bodyTab"><img src="download/error.png"></td></tr>
@@ -564,7 +564,8 @@ color:#fdf7a8;
 	       <a class="bodyNames">Mame</a> </td></tr>
 			
 			<tr><td colspan="10" class="bodyTab">Use Official Mame: <font color="#cb0"><a target="_blank" href="https://www.mamedev.org/release.html">https://www.mamedev.org</a> <font></td></tr>
-			<tr><td colspan="10" class="bodyTab">Copy the rom sfa3.zip to 2 locations:</td></tr>
+			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfz3mix.zip</font> to <font color="#0f0">sfa3.zip</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">Copy the rom sfz3mix.zip to 2 locations:</td></tr>
 			<tr><td colspan="10" class="bodyTab">1 - Root folder where mame64.exe is located </td></tr>
 			<tr><td colspan="10" class="bodyTab">2 - Mame roms folder </td></tr>
 			<tr><td colspan="10" class="bodyTab"><font color="#dd0">In the root folder click and hold the sfa3.zip file and drag to mame64.exe, as in the picture below </font><font> </td></tr>			
@@ -576,13 +577,13 @@ color:#fdf7a8;
 			<tr><td><img src="download/fba4droid.png" height="64" width="64" title="system" align="top"> <br>
 	       <a class="bodyNames">Fba4droid - Android</a> </td></tr>			
 			<tr><td colspan="10" class="bodyTab">Download: <font color="#cb0"><a target="_blank" href="http://www.mediafire.com/file/fiws61g1ui06cf6/fba4droid_1.77.apk/file">fba4droid</a> </td></tr>
-			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfa3.zip</font> to <font color="#ff0">sfa3ud.zip</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfz3mix.zip</font> to <font color="#ff0">sfa3ud.zip</font></td></tr>
 			<tr><td><br></td></tr>   
 		
 			
 			<tr><td><img src="download/old_emulators.png" height="64" width="64" title="system" align="top"> <br><a class="bodyNames">Old Emulators</a> </td></tr>
 			
-			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfa3.zip</font> to <font color="#ff0">sfa3ud.zip</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfz3mix.zip</font> to <font color="#ff0">sfa3ud.zip</font></td></tr>
 			<tr><td colspan="10" class="bodyTab">Open the rom sfa3ud.zip manually without the emulator having recognised and ignore CRC erros</td></tr>
             <tr><td><br></td></tr>   
 
