--- a/download.html
+++ b/download.html
@@ -522,10 +522,11 @@ color:#fdf7a8;
 		
 		
 		<td class="bodyData">
+		<a target="_blank" href="download/sfz3mix.zip" <font color="#0e0">Download</font> </a><br>
 		<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="144" width="144" title="sfz3mix.zip" align="top"></a> 
 	    &nbsp;&nbsp;&nbsp;</a> 
 	
-    	<br><font color="#0e0">Version 0.07</font> </a><br>
+    	<br> <font color="#0e0">Version 0.07</font> </a><br>
 		</td> 
   
             </tr>
