--- a/download.html
+++ b/download.html
@@ -526,7 +526,7 @@ color:#fdf7a8;
 		<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="144" width="144" title="sfz3mix.zip" align="top"></a> 
 	    &nbsp;&nbsp;&nbsp;</a> 
 	
-    	<br> <font color="#0e0">Version 0.07a</font> </a><br>
+    	<br> <font color="#0e0">Version 0.07b</font> </a><br>
 		</td> 
   
             </tr>
