--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ color:#fdf7a8;
 
 </style>
 
-<font color="#0F0"> Ver(0.07) <font>
+<font color="#0F0"> Ver(0.07b) <font>
 
 <tr><br></tr>	
 <span id="content_mlSub_lblSubmit" class="bodyHeading"></span>
