--- a/download.html
+++ b/download.html
@@ -579,14 +579,14 @@ color:#fdf7a8;
 	       <a class="bodyNames">Fba4droid - Android</a> </td></tr>			
 			<tr><td colspan="10" class="bodyTab">Download: <font color="#cb0"><a target="_blank" href="http://www.mediafire.com/file/fiws61g1ui06cf6/fba4droid_1.77.apk/file">fba4droid</a> </td></tr>
 			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfz3mix.zip</font> to <font color="#ff0">sfa3ud.zip</font></td></tr>
-			<tr><td colspan="10" class="bodyTab">Delete <font color="#0f0">sfa3.zip</font> remove the original rom sfa3.zip from the rom folder to avoid conflicts </font></td></tr>
+			<tr><td colspan="10" class="bodyTab">Remove the original rom <font color="#0f0">sfa3.zip</font> from the rom folder to avoid conflicts</td></tr>
 			<tr><td><br></td></tr>   
 		
 			
 			<tr><td><img src="download/old_emulators.png" height="64" width="64" title="system" align="top"> <br><a class="bodyNames">Old Emulators</a> </td></tr>
 			
 			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfz3mix.zip</font> to <font color="#ff0">sfa3ud.zip</font></td></tr>
-			<tr><td colspan="10" class="bodyTab">Delete <font color="#0f0">sfa3.zip</font> remove the original rom sfa3.zip from the rom folder to avoid conflicts </font></td></tr>
+			<tr><td colspan="10" class="bodyTab">Remove the original rom <font color="#0f0">sfa3.zip</font> from the rom folder to avoid conflicts</td></tr>
 			<tr><td colspan="10" class="bodyTab">Open the rom sfa3ud.zip manually without the emulator having recognised and ignore CRC erros</td></tr>
             <tr><td><br></td></tr>   
 
