--- a/download.html
+++ b/download.html
@@ -521,12 +521,12 @@ color:#fdf7a8;
             <tr><td></td><td colspan="2"></td></tr>		
 		
 		
-		<td class="bodyData">
-		<a target="_blank" href="download/sfz3mix.zip" <font color="#0e0">Download</font> </a><br>
-		<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="144" width="144" title="sfz3mix.zip" align="top"></a> 
+		<td class="bodyData">		
+		<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a> 
+		<a target="_blank" href="download/0.07b/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a> 
 	    &nbsp;&nbsp;&nbsp;</a> 
 	
-    	<br> <font color="#0e0">Version 0.07b</font> </a><br>
+    	<br> <font color="#0e0">Version 0.08 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Version 0.07b</font> </a><br>
 		</td> 
   
             </tr>
