--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ color:#fdf7a8;
 
 </style>
 
-<font color="#0F0"> Ver(0.07b) <font>
+<font color="#0F0"> Ver(0.08) <font>
 
 <tr><br></tr>	
 <span id="content_mlSub_lblSubmit" class="bodyHeading"></span>
@@ -6714,7 +6714,7 @@ color:#fdf7a8;
               <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Crouching </a></td>
 
-              <td style="max-width:45%" class="bodyData"><img src="moves/lpunch.png"> <img src="moves/mpunch.png"> <img src="moves/hpunch.png"> <img src="moves/lkick.png"></td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/lpunch.png"> <img src="moves/mpunch.png"> <img src="moves/hpunch.png"> <img src="moves/lkick.png"><img src="moves/mkick.png"></td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
