--- a/download.html
+++ b/download.html
@@ -526,7 +526,7 @@ color:#fdf7a8;
 		<a target="_blank" href="download/0.07b/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a> 
 	    &nbsp;&nbsp;&nbsp;</a> 
 	
-    	<br> <font color="#0e0">Version 0.08 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Version 0.07b</font> </a><br>
+    	<br> <font color="#0e0">Version 0.08 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp Version 0.07b</font> </a><br>
 		</td> 
   
             </tr>
