--- a/download.html
+++ b/download.html
@@ -519,18 +519,15 @@ color:#fdf7a8;
 		</td> 
               </tr>
             <tr><td></td><td colspan="2"></td></tr>		
-		
-		
-		<td class="bodyData">		
-		<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a> 
-		<a target="_blank" href="download/0.07b/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a> 
-	    &nbsp;&nbsp;&nbsp;</a> 
-	
-    	<br> <font color="#0e0">Version 0.08 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp Version 0.07b</font> </a><br>
-		</td> 
-  
-            </tr>
-            <tr><td></td><td colspan="2"></td></tr>	
+			
+			
+		<TABLE><TR>			
+			<TD><a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#0e0">Version 0.08</font></TD>
+			<TD><a target="_blank" href="download/0.07b/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#fff">Version 0.07b</font></TD>		
+		</TR></TABLE>		
+			
 			
 		
 <!-- ====================================================================================================================================================================================================================== -->			
