--- a/index.html
+++ b/index.html
@@ -6473,7 +6473,7 @@ color:#fdf7a8;
               <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Crouching </a></td>
 
-              <td style="max-width:45%" class="bodyData"><img src="moves/lpunch.png"> <img src="moves/mpunch.png"> <img src="moves/lkick.png"></td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/lpunch.png"> <img src="moves/mpunch.png"> <img src="moves/lkick.png"> <img src="moves/mkick.png"></td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
@@ -6944,7 +6944,7 @@ color:#fdf7a8;
               <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Crouching </a></td>
 
-              <td style="max-width:45%" class="bodyData"><img src="moves/lpunch.png"> <img src="moves/mpunch.png"> <img src="moves/lkick.png"></td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/lpunch.png"> <img src="moves/mpunch.png"> <img src="moves/lkick.png"> <img src="moves/mkick.png"></td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
