--- a/index.html
+++ b/index.html
@@ -638,6 +638,17 @@ color:#fdf7a8;
             </tr>
             <tr><td></td><td colspan="2"></td></tr>	
 			
+			
+			<tr style="vertical-align: top">
+              <td style="max-width:15%"></td>
+              <td style="max-width:35%"><a class="bodyMoves">Invert Air Recovery</a></td>
+
+              <td style="max-width:45%" class="bodyData">Hold <img src="moves/punch3x.png">, before the Stage is loaded to change Recovery mode selected<font><font></td>
+       
+            </tr>
+            <tr><td></td><td colspan="2"></td></tr>	
+			
+			
 			<tr><td colspan="10" class="bodyTab">_________________________________________________________________________</td></tr>
 			
 			<tr><td colspan="10" class="bodyTab">In the Fight: </td></tr>   
