--- a/download.html
+++ b/download.html
@@ -545,11 +545,7 @@ color:#fdf7a8;
 			
 			
 			<tr><td colspan="10" class="bodyTab">Download: <font color="#cb0"><a target="_blank" href="https://www.fightcade.com/">https://www.fightcade.com</a> </td></tr>
-			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfz3mix.zip</font> to <font color="#0f0">sfa3.zip</font> and put in the folder <font color="#ff0">"FightCade/emulator/fbneo/ROMs"</font> </td></tr>
-			<tr><td colspan="10" class="bodyTab">ignore CRC errors, enter in SFA3 (980904 Euro) rom and click in Test Game</td></tr>	
-			<tr><td colspan="10" class="bodyTab">To play online you need both players to have the same rom, ignore the errors,</td></tr>
-			<tr><td colspan="10" class="bodyTab">and reset with F3 (player 1) when starting and the error appears when loading savestate</td></tr>
-			<tr><td colspan="10" class="bodyTab"><img src="download/error.png"></td></tr>
+			<tr><td colspan="10" class="bodyTab">Put <font color="#0f0">sfz3mix.zip</font> in the folder <font color="#ff0">"FightCade/emulator/fbneo/ROMs"</font> </td></tr>
 			<tr><td><br></td></tr>
 			
 			<tr><td><img src="download/fbneo.png" height="64" width="64" title="system" align="top"> <br><a class="bodyNames">FinalBurn Neo</a> </td></tr>
@@ -562,11 +558,12 @@ color:#fdf7a8;
 	       <a class="bodyNames">Mame</a> </td></tr>
 			
 			<tr><td colspan="10" class="bodyTab">Use Official Mame: <font color="#cb0"><a target="_blank" href="https://www.mamedev.org/release.html">https://www.mamedev.org</a> <font></td></tr>
-			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfz3mix.zip</font> to <font color="#0f0">sfa3.zip</font></td></tr>
-			<tr><td colspan="10" class="bodyTab">Copy the rom sfz3mix.zip to 2 locations:</td></tr>
+			<tr><td colspan="10" class="bodyTab">Remove the original rom <font color="#0f0">sfa3.zip</font> from the rom folder to avoid conflicts</td></tr>
+			<tr><td colspan="10" class="bodyTab">Rename <font color="#0f0">sfz3mix.zip</font> to <font color="#0f0">sfa3ud.zip</font></td></tr>
+			<tr><td colspan="10" class="bodyTab">Copy the rom sfa3ud.zip to 2 locations:</td></tr>
 			<tr><td colspan="10" class="bodyTab">1 - Root folder where mame64.exe is located </td></tr>
 			<tr><td colspan="10" class="bodyTab">2 - Mame roms folder </td></tr>
-			<tr><td colspan="10" class="bodyTab"><font color="#dd0">In the root folder click and hold the sfa3.zip file and drag to mame64.exe, as in the picture below </font><font> </td></tr>			
+			<tr><td colspan="10" class="bodyTab"><font color="#dd0">In the root folder click and hold the sfa3ud.zip file and drag to mame64.exe, as in the picture below </font><font> </td></tr>			
 			
 			<tr><td colspan="10"> <img src="download/mame_run.png"> </td></tr>	
             <tr><td><br></td></tr>   
