--- a/download.html
+++ b/download.html
@@ -520,11 +520,21 @@ color:#fdf7a8;
               </tr>
             <tr><td></td><td colspan="2"></td></tr>		
 			
+		<TABLE><TR>		
+			<TD><font color="#0ff">New</font><br>
+			<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#0f0">Version 0.09</font></TD>		
+		</TR></TABLE>		
 			
+		
+		<tr><td colspan="10" class="bodyTab">______________________________________________________</td></tr>
+		
 		<TABLE><TR>			
-			<TD><a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
-			<br> <font color="#0e0">Version 0.08</font></TD>
-			<TD><a target="_blank" href="download/0.07b/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<TD><font color="#0ff">FightCade2</font><br> 
+			<a target="_blank" href="download/0.08/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#fff">Version 0.08</font></TD>
+			<TD> <br> 
+			<a target="_blank" href="download/0.07b/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
 			<br> <font color="#fff">Version 0.07b</font></TD>		
 		</TR></TABLE>		
 			
