--- a/index.html
+++ b/index.html
@@ -655,6 +655,15 @@ color:#fdf7a8;
 			
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
+              <td style="max-width:35%"><a class="bodyMoves">Short Jump</a></td>
+
+              <td style="max-width:45%" class="bodyData"> <font color="#ff0">Quickly</font> press and release the directional <font color="#d00">(ver 0.09)</font></td>
+       
+            </tr>
+            <tr><td></td><td colspan="2"></td></tr>
+			
+			<tr style="vertical-align: top">
+              <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">First Attack</a></td>
 
               <td style="max-width:45%" class="bodyData"> <font color="#0ff">Power</font> Level +1 <font color="#d00">(except in Zero Counter)</font> </td>
