--- a/download.html
+++ b/download.html
@@ -523,7 +523,10 @@ color:#fdf7a8;
 		<TABLE><TR>		
 			<TD><font color="#0ff">New</font><br>
 			<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
-			<br> <font color="#0f0">Version 0.09</font></TD>		
+			<br> <font color="#0f0">Version 0.10</font></TD>		
+			<TD> <br>
+			<a target="_blank" href="https://drive.google.com/uc?export=download&id=10vnZXU907Z1TvjS1_pjHSUOhnxALaEkU"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#fff">Version 0.09</font></TD>	
 		</TR></TABLE>		
 			
 		
@@ -534,7 +537,7 @@ color:#fdf7a8;
 			<a target="_blank" href="download/0.08/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
 			<br> <font color="#fff">Version 0.08</font></TD>
 			<TD> <br> 
-			<a target="_blank" href="download/0.07b/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1DQ-eCmkvNeYsyuRvN6xZ_yqsoquQYMVF"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
 			<br> <font color="#fff">Version 0.07b</font></TD>		
 		</TR></TABLE>		
 			
