--- a/arts.html
+++ b/arts.html
@@ -521,6 +521,7 @@ color:#fdf7a8;
 	<a href="arts/03.html"> <img src="arts/2.jpg"></a>
 	<a href="arts/04.html"> <img src="arts/3on3.jpg"></a>
 	<a href="arts/05.html"> <img src="arts/popstersaku.jpg"></a>
+	<a href="https://www.instagram.com/p/CcgrvcwpFuw/"> <img src="arts/akuma.jpg"></a>
 	<a href="arts/06.html"> <img src="arts/sakura.jpg"></a>
 	<a href="arts/07.html"> <img src="arts/charlie.jpg"></a>
 	<a href="arts/08.html"> <img src="arts/mika.jpg"></a>
