--- a/download.html
+++ b/download.html
@@ -524,7 +524,10 @@ color:#fdf7a8;
 		<TABLE><TR>		
 			<TD><font color="#0ff">New</font><br>
 			<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
-			<br> <font color="#0f0">Version 0.11</font></TD>		
+			<br> <font color="#0f0">Version 0.12</font></TD>		
+			<TD> <br>
+			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1gNG-IQRP9KZW6_lgfhAfoAFoHd_PKw8H"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#fff">Version 0.11</font></TD>		
 			<TD> <br>
 			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1G1btVm5lMfVj2XAm7N7rgSlW85_inNRk"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
 			<br> <font color="#fff">Version 0.10</font></TD>		
