--- a/download.html
+++ b/download.html
@@ -521,10 +521,14 @@ color:#fdf7a8;
               </tr>
             <tr><td></td><td colspan="2"></td></tr>		
 			
-		<TABLE><TR>		
+		<TABLE><TR>	
 			<TD><font color="#0ff">New</font><br>
 			<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
-			<br> <font color="#0f0">Version 0.12</font></TD>		
+			<br> <font color="#0f0">Version 0.13</font></TD>		
+			<TD> <br>
+			<TD><font color="#ff0">FightCade2</font><br>
+			<a target="_blank" href="download/0.08/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#fff">Version 0.12</font></TD>		
 			<TD> <br>
 			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1gNG-IQRP9KZW6_lgfhAfoAFoHd_PKw8H"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
 			<br> <font color="#fff">Version 0.11</font></TD>		
@@ -540,8 +544,8 @@ color:#fdf7a8;
 		<tr><td colspan="10" class="bodyTab">______________________________________________________</td></tr>
 		
 		<TABLE><TR>			
-			<TD><font color="#0ff">FightCade2</font><br> 
-			<a target="_blank" href="download/0.08/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<TD><br> 
+			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1vUjeKZtRlbB6P9MkAZmTXKJdoS_fCYoA"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
 			<br> <font color="#fff">Version 0.08</font></TD>
 			<TD> <br> 
 			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1DQ-eCmkvNeYsyuRvN6xZ_yqsoquQYMVF"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
