--- a/download.html
+++ b/download.html
@@ -528,27 +528,27 @@ color:#fdf7a8;
 			<TD> <br>
 			<TD><font color="#ff0">FightCade2</font><br>
 			<a target="_blank" href="download/0.12/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
-			<br> <font color="#fff">Version 0.12</font></TD>		
-			<TD> <br>
-			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1gNG-IQRP9KZW6_lgfhAfoAFoHd_PKw8H"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
-			<br> <font color="#fff">Version 0.11</font></TD>		
-			<TD> <br>
-			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1G1btVm5lMfVj2XAm7N7rgSlW85_inNRk"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
-			<br> <font color="#fff">Version 0.10</font></TD>		
-			<TD> <br>
-			<a target="_blank" href="https://drive.google.com/uc?export=download&id=10vnZXU907Z1TvjS1_pjHSUOhnxALaEkU"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
-			<br> <font color="#fff">Version 0.09</font></TD>	
+			<br> <font color="#fff">Version 0.12</font></TD>	
 		</TR></TABLE>		
 			
 		
-		<tr><td colspan="10" class="bodyTab">______________________________________________________</td></tr>
+		<tr><td colspan="10" class="bodyTab">______________________________________________________________________</td></tr>
 		
-		<TABLE><TR>			
+		<TABLE><TR>
+			<TD> <br>
+			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1gNG-IQRP9KZW6_lgfhAfoAFoHd_PKw8H"> <img src="old.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#fff">Version 0.11</font></TD>		
+			<TD> <br>
+			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1G1btVm5lMfVj2XAm7N7rgSlW85_inNRk"> <img src="old.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#fff">Version 0.10</font></TD>		
+			<TD> <br>
+			<a target="_blank" href="https://drive.google.com/uc?export=download&id=10vnZXU907Z1TvjS1_pjHSUOhnxALaEkU"> <img src="old.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#fff">Version 0.09</font></TD>	
 			<TD><br> 
-			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1vUjeKZtRlbB6P9MkAZmTXKJdoS_fCYoA"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1vUjeKZtRlbB6P9MkAZmTXKJdoS_fCYoA"> <img src="old.png" height="132" width="132" title="download" align="top"></a>
 			<br> <font color="#fff">Version 0.08</font></TD>
 			<TD> <br> 
-			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1DQ-eCmkvNeYsyuRvN6xZ_yqsoquQYMVF"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
+			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1DQ-eCmkvNeYsyuRvN6xZ_yqsoquQYMVF"> <img src="old.png" height="132" width="132" title="download" align="top"></a>
 			<br> <font color="#fff">Version 0.07b</font></TD>		
 		</TR></TABLE>		
 			
