--- a/download.html
+++ b/download.html
@@ -522,19 +522,19 @@ color:#fdf7a8;
             <tr><td></td><td colspan="2"></td></tr>		
 			
 		<TABLE><TR>	
-			<TD><font color="#0ff">New</font><br>
+			<TD><font color="#0ff">FightCade2</font><br>
 			<a target="_blank" href="download/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
 			<br> <font color="#0f0">Version 0.13</font></TD>		
-			<TD> <br>
-			<TD><font color="#ff0">FightCade2</font><br>
-			<a target="_blank" href="download/0.12/sfz3mix.zip"> <img src="download.png" height="132" width="132" title="download" align="top"></a>
-			<br> <font color="#fff">Version 0.12</font></TD>	
+			<TD> <br>			
 		</TR></TABLE>		
 			
 		
-		<tr><td colspan="10" class="bodyTab">______________________________________________________________________</td></tr>
+		<tr><td colspan="10" class="bodyTab">____________________________________________________________________________________</td></tr>
 		
 		<TABLE><TR>
+			<TD> <br>
+			<a target="_blank" href="download/0.12/sfz3mix.zip"> <img src="old.png" height="132" width="132" title="download" align="top"></a>
+			<br> <font color="#fff">Version 0.12</font></TD>	
 			<TD> <br>
 			<a target="_blank" href="https://drive.google.com/uc?export=download&id=1gNG-IQRP9KZW6_lgfhAfoAFoHd_PKw8H"> <img src="old.png" height="132" width="132" title="download" align="top"></a>
 			<br> <font color="#fff">Version 0.11</font></TD>		
