--- a/download.html
+++ b/download.html
@@ -63,7 +63,7 @@ td.header2 {
      
             <td id="link_1" class="header"><a class="header" href="index.html">Characters</a></td>		             
             <td id="link_2" class="header2"><a class="header" href="download.html">Download</a></td>
-			<td id="link_4" class="header"><a class="header" href="play.html">Play Now</a></td>	    			
+		<!--	<td id="link_4" class="header"><a class="header" href="play.html">Play Now</a></td>	-->    			
             <td id="link_3" class="header"><a class="header" href="arts.html">Arts</a></td>	             
             
 		
