--- a/arts.html
+++ b/arts.html
@@ -69,7 +69,9 @@ td.header2 {
             
 		
 			<td style="padding:0px"><img src="blanka.gif" height="80" ></td>
-			<td id="link_4"><a target="_blank" class="header" href="https://www.instagram.com/jajalobrit">https://www.instagram.com/jajalobrit</a></td>	 
+						
+			<td style="padding:0px"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  </td>
+			<td align="right" id="link_9"><a target=”_blank” href="https://sf2mix.github.io/download_br.html"> <img src="sf2mix.png" height="64" title="SF2Mix"></a></td>
 			
 			</tr></tbody></table>
 			
@@ -516,6 +518,7 @@ color:#fdf7a8;
 	
 	
 	<td class="bodyData"> 	
+	<a target="_blank" class="header" href="https://www.instagram.com/jajalobrit">https://www.instagram.com/jajalobrit</a> <br>
 	<a href="arts/02.html"> <img src="arts/poster3.jpg"></a>
 	<a href="arts/10.html"> <img src="arts/poster4.jpg"></a>
 	<a href="arts/01.html"> <img src="arts/wall3.jpg"></a>
@@ -532,7 +535,7 @@ color:#fdf7a8;
 	<a href="arts/13.html"> <img src="arts/capa1.png"></a>
 	<a href="arts/14.html"> <img src="arts/capa2.png"></a>
 	<a href="arts/15.html"> <img src="arts/capa3.png"></a>
-	<a href="arts/99.html"> <img src="arts/marq.jpg"></a>		
+	<a href="arts/99.html"> <img src="arts/marq.jpg"></a>	
 	</td>	
 	
 	
