--- a/download.html
+++ b/download.html
@@ -593,7 +593,7 @@ color:#fdf7a8;
 		
 			<tr><td colspan="10" class="bodyTab">____________________________________________________________________________________</td></tr>				
 			
-			<tr><td colspan="10" class="bodyNames"><font color="#FFF">Samples for </font><font color="#FF0">0.21:</font></td></tr> <br>
+			<tr><td colspan="10" class="bodyNames"><font color="#FFF">Custom Samples for </font><font color="#FF0">0.21:</font></td></tr> <br>
 		    <tr><td><br></td></tr>		
 					
 			<tr><td><a class="bodyNames" href="download/samples.7z"> <img src="download/samples.png" height="64" width="64" title="system" align="top"> </a>
