--- a/download.html
+++ b/download.html
@@ -526,7 +526,8 @@ color:#fdf7a8;
 			<a style="text-decoration: none" target="_blank" href="download/sfz3mix.7z"> <img src="moves/16x9.png"> <img src="moves/v16x9.png"></a>
 			<br> <a style="text-decoration: none" target="_blank" href="download/sfz3mix.7z"><font color="#0f0">Version 0.21</font> - <font color="#ff0"> CPS2<font color="#0ff">Turbo</font></font></a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp <a style="text-decoration: none" target="_blank" href="https://drive.google.com/file/d/1oFdl2z_eRj5-5cV1p4NCrNnJgeR0_oQc/view?usp=sharing"><font color="#f00"> Emulator for 0.21 + Samples</font></a>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp <a style="text-decoration: none" target="_blank" href="download/driver.zip"> Driver Source</a>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp <a style="text-decoration: none" target="_blank" href="download/driver_0260.zip"> Driver Mame0260</a>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp <a style="text-decoration: none" target="_blank" href="download/driver_0253.zip"> Driver Mame0253</a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp <a style="text-decoration: none" target="_blank" href="https://drive.google.com/uc?export=download&id=11SfQ8XQON2Ul2IqFen8ek44UEsUbU_fr"> Libretro Source</a>
 			</TD>		
 			<TD> <br>			
