--- a/download.html
+++ b/download.html
@@ -516,7 +516,15 @@ color:#fdf7a8;
 	
 		<td class="bodyData">
 		<a target="_blank" href="log.txt"> <font color="#0F0"> Updates log</font></a> 
-	    &nbsp;&nbsp;&nbsp; </a> <br><br>	
+		
+	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+	    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+		<a target="_blank" href="download/beta/sfz3mix.7z"> <font color="#0FF"> beta test version</font></a>	
+		- <a target="_blank" href="download/beta/log.txt"> <font color="#fF0"> log</font></a> <br><br>	
     	
 		</td> 
               </tr>       
