--- a/download.html
+++ b/download.html
@@ -627,8 +627,8 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyNames"><font color="#FFF">Custom Samples </font></td></tr> <br>
 		    <tr><td><br></td></tr>		
 					
-			<tr><td><a class="bodyNames" href="download/samples.7z"> <img src="download/samples.png" height="64" width="64" title="system" align="top"> </a>
-	        <a class="bodyNames" href="download/samples.7z">Samples ver 0.23</font></a> </td></tr>
+			<tr><td><a class="bodyNames" href="download/samples/sfz3mix.7z"> <img src="download/samples.png" height="64" width="64" title="system" align="top"> </a>
+	        <a class="bodyNames" href="download/samples/sfz3mix.7z">Samples ver 0.23</font></a> </td></tr>
 			<tr><td colspan="10" class="bodyTab">Copy <a href="download/samples/sfz3mix.7z"><font color="#0f0">sfz3mix.7z</font></a> in samples folder</td></tr>
 			
 			<br>
