--- a/download.html
+++ b/download.html
@@ -633,6 +633,7 @@ color:#fdf7a8;
 			
 			<br>
 			<tr><td colspan="10" class="bodyTab"><font color="#ff0">Fbneo in Retroarch:</font> Copy <a href="samples/sfz3mix.7z"><font color="#0f0">sfz3mix.7z</font></a> in system/fbneo/samples </td></tr>
+			<tr><td colspan="10" class="bodyTab"><font color="#f00">*On FBNeo the samples are louder than on MAME</font></td></tr>
 			
 			
 			
